CHANGE NEW INDEX FILE

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <h1>HELLO </h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis et dolorum rem expedita quas deleniti rerum repudiandae, aspernatur commodi facere natus, animi aliquam tenetur pariatur exercitationem necessitatibus suscipit maiores fugit velit odio? Corrupti porro ab consequuntur sed fugit culpa reprehenderit asperiores dolores veniam cupiditate corporis, aliquid repudiandae fuga numquam quos ipsam distinctio at laboriosam maiores labore tempora ipsa, temporibus amet aut? Numquam error nobis vitae debitis soluta impedit saepe, nulla qui minus ratione. Laboriosam repudiandae ullam, reprehenderit nulla facilis nesciunt est dolorem labore, explicabo optio natus quos quasi beatae ipsa quam voluptatum. Soluta obcaecati nihil aliquid earum? Temporibus porro dicta ut excepturi voluptatem perspiciatis doloribus maxime velit labore laudantium corrupti fuga cumque, cupiditate, ratione consequatur. Alias deserunt veritatis mollitia nihil delectus. Ex? </P>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis et dolorum rem expedita quas deleniti rerum repudiandae, aspernatur commodi facere natus, animi aliquam tenetur pariatur exercitationem necessitatibus suscipit maiores fugit velit odio? Corrupti porro ab consequuntur sed fugit culpa reprehenderit asperiores dolores veniam cupiditate corporis, aliquid repudiandae fuga numquam quos ipsam distinctio at laboriosam maiores labore tempora ipsa, temporibus amet aut? Numquam error nobis vitae debitis soluta impedit saepe, nulla qui minus ratione. Laboriosam repudiandae ullam, reprehenderit nulla facilis nesciunt est dolorem labore, explicabo optio natus quos quasi beatae ipsa quam voluptatum. Soluta obcaecati nihil aliquid earum? Temporibus porro dicta ut excepturi voluptatem perspiciatis doloribus maxime velit labore laudantium corrupti fuga cumque, cupiditate, ratione consequatur. Alias deserunt veritatis mollitia nihil delectus. Ex? gi</P>
+    <form action="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+        <input type="text" name="text" id="">
+    </form>
 </body>
 </html>
